--- a/translations/kangyur/placeholders/096-013_toh764,970-the_incantation_of_manibhadra.xml
+++ b/translations/kangyur/placeholders/096-013_toh764,970-the_incantation_of_manibhadra.xml
@@ -9,17 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">nor bzang gi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryamaṇibhadranāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nor bu bzang po'i gzungs zhes bya ba/</title>
-                <author role="translatorMain" xml:id="UT22084-096-013-1"/>
+                <author role="translatorMain" xml:id="UT22084-096-013-1">Buddhapīṭha Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-096-013-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-096-013-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-096-013-4">Péter-Dániel Szántó</author>
+                <editor role="projectEditor" xml:id="UT22084-096-013-21">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-096-013"/>
                 <date/>
             </publicationStmt>
@@ -79,6 +80,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-20T14:38:47.427Z" type="text-version" status="0.0.8" xml:id="UT22084-096-013-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T14:39:27.532Z" type="text-version" status="0.0.9" xml:id="UT22084-096-013-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T08:42:05.561Z" type="translation-status" status="2.f" xml:id="UT22084-096-013-23">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T08:42:05.561Z" type="text-version" status="0.0.10" xml:id="UT22084-096-013-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
