--- a/translations/kangyur/placeholders/096-018_toh769,971-the_beneficent_incantation_of_the_compassionate_jambhalajalendra.xml
+++ b/translations/kangyur/placeholders/096-018_toh769,971-the_beneficent_incantation_of_the_compassionate_jambhalajalendra.xml
@@ -8,22 +8,23 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Kāruṇikāryajambhalajalendra­suśaṅkaradhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gnod 'dzin chu dbang snying rje can gyi gzungs bde byed/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Kāruṇikārya­jambhalajalendra­suśaṅkara­nāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Kāruṇikāryajambhala­jalendrasuśaṅkara­dhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Kāruṇikāryajambhala­jalendrasuśaṅkara­nāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">[Note: Degé has kāruṇikasyārya­jambhalajalendra­suśaṅkaradhāraṇī]</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Kāruṇikāryajambhala­jalendrasuśaṅkara­dhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gnod 'dzin chu dbang snying rje can gyi gzungs bde byed ces bya ba</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gnod 'dzin chu dbang snying rje can gyi gzungs bde byed ces bya ba/</title>
-                <author role="translatorMain" xml:id="UT22084-096-018-1"/>
+                <author role="translatorMain" xml:id="UT22084-096-018-1">Buddhapīṭha Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-096-018-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-096-018-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-096-018-4">Péter-Dániel Szántó</author>
+                <editor role="projectEditor" xml:id="UT22084-096-018-21">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-096-018"/>
                 <date/>
             </publicationStmt>
@@ -83,6 +84,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-20T14:39:56.146Z" type="text-version" status="0.0.8" xml:id="UT22084-096-018-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T14:40:27.776Z" type="text-version" status="0.0.9" xml:id="UT22084-096-018-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T08:43:15.368Z" type="translation-status" status="2.f" xml:id="UT22084-096-018-23">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T08:43:15.368Z" type="text-version" status="0.0.10" xml:id="UT22084-096-018-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
