--- a/translations/kangyur/placeholders/079-036_toh409-the_tantra_of_vajrabhairavas_destruction.xml
+++ b/translations/kangyur/placeholders/079-036_toh409-the_tantra_of_vajrabhairavas_destruction.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-079-036-30">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-079-036"/>
                 <date/>
             </publicationStmt>
@@ -92,6 +92,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-19T14:23:57.997Z" type="text-version" status="0.0.12" xml:id="UT22084-079-036-33">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T08:54:50.857Z" type="translation-status" status="2.a" xml:id="UT22084-079-036-34">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T08:54:50.857Z" type="text-version" status="0.0.13" xml:id="UT22084-079-036-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
