--- a/translations/kangyur/placeholders/083-008_toh460a,952-the_incantation_for_seeing_vajrapani_in_dream.xml
+++ b/translations/kangyur/placeholders/083-008_toh460a,952-the_incantation_for_seeing_vajrapani_in_dream.xml
@@ -21,11 +21,11 @@
                 <editor role="projectEditor" xml:id="UT22084-083-008-31">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-083-008"/>
             </publicationStmt>
             <sourceDesc>
@@ -109,6 +109,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-19T14:27:01.614Z" type="text-version" status="0.0.12" xml:id="UT22084-083-008-34">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T08:56:27.766Z" type="translation-status" status="2.a" xml:id="UT22084-083-008-35">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T08:56:27.766Z" type="text-version" status="0.0.13" xml:id="UT22084-083-008-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
