--- a/translations/kangyur/placeholders/083-019_toh471,2006-the_practice_of_the_legend.xml
+++ b/translations/kangyur/placeholders/083-019_toh471,2006-the_practice_of_the_legend.xml
@@ -14,11 +14,11 @@
                 <editor role="projectEditor" xml:id="UT22084-083-019-33">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2024</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-083-019"/>
             </publicationStmt>
             <sourceDesc>
@@ -105,6 +105,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-19T14:32:08.718Z" type="text-version" status="0.0.14" xml:id="UT22084-083-019-36">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T08:58:08.667Z" type="translation-status" status="2.a" xml:id="UT22084-083-019-37">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T08:58:08.667Z" type="text-version" status="0.0.15" xml:id="UT22084-083-019-38">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
