--- a/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -12,13 +12,14 @@
                 <author role="translatorMain" xml:id="UT22084-093-020-8">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-093-020-9">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-093-020-18">Torsten Gerloff</editor>
+                <editor role="copyEditor" xml:id="UT22084-093-020-27">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-093-020"/>
                 <date/>
             </publicationStmt>
@@ -96,6 +97,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-30T08:50:31.691Z" type="text-version" status="0.0.11" xml:id="UT22084-093-020-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T08:51:04.335Z" type="text-version" status="0.0.12" xml:id="UT22084-093-020-28">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T09:26:41.024Z" type="translation-status" status="2.d" xml:id="UT22084-093-020-29">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T09:26:41.024Z" type="text-version" status="0.0.13" xml:id="UT22084-093-020-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
