--- a/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -14,11 +14,11 @@
                 <editor role="reviser" xml:id="UT22084-093-021-17">Torsten Gerloff</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-093-021"/>
                 <date/>
             </publicationStmt>
@@ -84,6 +84,12 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-30T08:51:32.436Z" type="text-version" status="0.0.10" xml:id="UT22084-093-021-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T09:30:00.697Z" type="translation-status" status="2.d" xml:id="UT22084-093-021-23">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T09:30:00.697Z" type="text-version" status="0.0.11" xml:id="UT22084-093-021-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
