--- a/translations/kangyur/translations/088-003_toh509,920-the_dharani_one_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
+++ b/translations/kangyur/translations/088-003_toh509,920-the_dharani_one_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
@@ -19,7 +19,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-088-003-142">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2024</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -174,6 +174,9 @@
                 </change>
                 <change who="#john" when="2024-09-11T10:02:09.353Z" type="text-version" status="1.0.5" xml:id="UT22084-088-003-156">
                     <desc>Minor edits to introduction.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-09-26T13:11:25.009Z" type="text-version" status="1.0.6" xml:id="UT22084-088-003-157">
+                    <desc>Updated Sanskrit mantra.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -406,8 +409,7 @@
                     <p rend="mantra" tid="24">
                         <mantra xml:lang="Sa-Ltn">oṁ namo bhagavate
                             vipula­vadana­kāñca­notkṣiptapra­bhāsaketumūr­dhane tathāgatāya arhate
-                            samyaksaṃ­buddhāya | namo bhagavate śākyamunaye tathāgatāya
-                            samyaksaṃ­buddhāya | </mantra>
+                            samyaksaṃ­buddhāya | namo bhagavate śākyamunaye tathāgatāya arhate samyaksaṃ­buddhāya | </mantra>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-088-003-72"/>
                     <p rend="mantra" tid="25">
