--- a/translations/kangyur/translations/062-019_toh219-putting_an_end_to_karmic_obscurations.xml
+++ b/translations/kangyur/translations/062-019_toh219-putting_an_end_to_karmic_obscurations.xml
@@ -31,7 +31,7 @@
                 <editor role="copyEditor" xml:id="UT22084-062-019-433">Tracy Davis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -159,6 +159,9 @@
                 </change>
                 <change who="#andre" when="2024-09-26T14:35:01.77Z" type="text-version" status="1.0.2" xml:id="UT22084-062-019-438">
                     <desc>Glossary integration revised - activated in CG</desc>
+                </change>
+                <change who="#andre" when="2024-09-26T15:04:24.406Z" type="text-version" status="1.0.3" xml:id="UT22084-062-019-439">
+                    <desc>Glossary instance corrected</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -383,7 +386,7 @@
                         rich, with great wealth—great possessions, gold, herds, many requisites, very happy, and riding in a great carriage—should
                         also in this way confess their individual karmic obscurations, not conceal them, and state that they will not repeat them.</p>
                     <milestone unit="chunk" xml:id="UT22084-062-019-108"/>
-                    <p tid="40">“Those who wish to be reborn into the same way of life as that of the devas of the Cāturmahā­rāja­kāyikā should in
+                    <p tid="40">“Those who wish to be reborn into the same way of life as that of the devas of the Cāturmahā-rāja-kāyika should in
                         this way confess their individual karmic obscurations, not conceal them, and state that they will not repeat them.</p>
                     <milestone unit="chunk" xml:id="UT22084-062-019-109"/>
                     <p tid="41">“Those who wish to be reborn among the devas of Trāyastriṃśa, with their same quality of life, should in this way
@@ -2148,14 +2151,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-062-019-364">
-                            <term type="translationMain">Cāturmahā­rāja­kāyika</term>
-                            <term xml:lang="Bo-Ltn" status="verified" n="1">rgyal chen bzhi’i ris </term>
-                            <term xml:lang="bo" n="1">རྒྱལ་ཆེན་བཞིའི་རིས།</term>
-                            <term xml:lang="Sa-Ltn">cāturmahā­rāja­kāyika</term>
-                            <note rend="override" type="definition">
-                                <p>“The Division of the Four Mahārājas.” The paradise of the Four Mahārājas, which is situated at
-                                    the base of Sumeru. The lowest of the six paradises of the desire realm.</p>
+                        <gloss xml:id="UT22084-062-019-364" type="place" mode="match">
+                            <term type="translationMain">Cāturmahā-rāja-kāyika</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">cāturmahā­rāja­kāyika</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal chen bzhi’i ris</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་ཆེན་བཞིའི་རིས།</term>
+                            <note type="definition" rend="override">
+                                <p>“The Division of the Four Mahārājas.” The paradise of the Four Mahārājas, which is situated at the base of Sumeru. The lowest of the six paradises of the desire realm.</p>
                             </note>
                         </gloss>
                     </item>
