--- a/translations/kangyur/placeholders/082-004_toh453-the_beginning_chapter_of_the_supremely_great_vajra.xml
+++ b/translations/kangyur/placeholders/082-004_toh453-the_beginning_chapter_of_the_supremely_great_vajra.xml
@@ -17,11 +17,11 @@
                 <author role="translatorEng" xml:id="UT22084-082-004-4">Thomas Doctor</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-082-004"/>
                 <date/>
             </publicationStmt>
@@ -55,6 +55,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-082-004-10">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-27T09:06:38.037Z" type="translation-status" status="2.h" xml:id="UT22084-082-004-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-27T09:06:38.037Z" type="text-version" status="0.0.7" xml:id="UT22084-082-004-12">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
