--- a/translations/tengyur/placeholders/045-014_toh1916-caturdevatapariprcchatika.xml
+++ b/translations/tengyur/placeholders/045-014_toh1916-caturdevatapariprcchatika.xml
@@ -12,11 +12,11 @@
                 <author role="translatorEng" xml:id="UT23703-045-014-8">Paul G. Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT23703-045-014"/>
             </publicationStmt>
             <sourceDesc>
@@ -54,6 +54,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-20T09:53:57.437Z" type="text-version" status="0.0.3" xml:id="UT23703-045-014-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T12:32:56.463Z" type="translation-status" status="2.g" xml:id="UT23703-045-014-12">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T12:32:56.463Z" type="text-version" status="0.0.4" xml:id="UT23703-045-014-13">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
