--- a/translations/kangyur/placeholders/083-010_toh462-the_incantation_of_the_vajra_flame.xml
+++ b/translations/kangyur/placeholders/083-010_toh462-the_incantation_of_the_vajra_flame.xml
@@ -10,12 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">rdo rje snying po rdo rje lce dbab pa zhes bya ba'i gzungs/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-083-010"/>
             </publicationStmt>
             <sourceDesc>
@@ -36,6 +36,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-083-010-2">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T12:47:53.062Z" type="translation-status" status="3" xml:id="UT22084-083-010-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T12:47:53.062Z" type="text-version" status="0.0.3" xml:id="UT22084-083-010-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
