--- a/translations/kangyur/placeholders/088-017_toh523,887-the_incantation_lord_of_the_earth.xml
+++ b/translations/kangyur/placeholders/088-017_toh523,887-the_incantation_lord_of_the_earth.xml
@@ -13,11 +13,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryamahāmahīndranāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-088-017"/>
             </publicationStmt>
             <sourceDesc>
@@ -48,6 +48,12 @@
                 </change>
                 <change who="#sameer" when="2024-03-31T06:04:12.155Z" type="text-version" status="0.0.2" xml:id="UT22084-088-017-2">
                     <desc>Updated vol. 88 and 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T12:49:47.597Z" type="translation-status" status="3" xml:id="UT22084-088-017-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T12:49:47.597Z" type="text-version" status="0.0.3" xml:id="UT22084-088-017-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
