--- a/translations/kangyur/placeholders/088-037_toh542,872-the_incantation_known_as_distinctive.xml
+++ b/translations/kangyur/placeholders/088-037_toh542,872-the_incantation_known_as_distinctive.xml
@@ -14,11 +14,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryaviśeṣavatīnāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-088-037"/>
             </publicationStmt>
             <sourceDesc>
@@ -49,6 +49,12 @@
                 </change>
                 <change who="#sameer" when="2024-03-31T07:55:07.424Z" type="text-version" status="0.0.2" xml:id="UT22084-088-037-2">
                     <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T12:55:51.902Z" type="translation-status" status="3" xml:id="UT22084-088-037-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T12:55:51.902Z" type="text-version" status="0.0.3" xml:id="UT22084-088-037-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
