--- a/translations/kangyur/placeholders/090-044_toh600,962-the_incantation_of_usnisajvala.xml
+++ b/translations/kangyur/placeholders/090-044_toh600,962-the_incantation_of_usnisajvala.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">gtsug tor 'bar ba zhes bya ba'i gzungs/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-090-044"/>
             </publicationStmt>
             <sourceDesc>
@@ -46,6 +46,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T10:04:21.926Z" type="text-version" status="0.0.2" xml:id="UT22084-090-044-2">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T13:22:47.229Z" type="translation-status" status="3" xml:id="UT22084-090-044-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T13:22:47.229Z" type="text-version" status="0.0.3" xml:id="UT22084-090-044-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
