--- a/translations/kangyur/placeholders/090-047_toh603,913-the_incantation_of_the_apex_of_compassion.xml
+++ b/translations/kangyur/placeholders/090-047_toh603,913-the_incantation_of_the_apex_of_compassion.xml
@@ -14,11 +14,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Karuṇāgranāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-090-047"/>
             </publicationStmt>
             <sourceDesc>
@@ -49,6 +49,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:24:08.915Z" type="text-version" status="0.0.2" xml:id="UT22084-090-047-2">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T13:24:19.072Z" type="translation-status" status="3" xml:id="UT22084-090-047-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T13:24:19.072Z" type="text-version" status="0.0.3" xml:id="UT22084-090-047-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
