--- a/translations/kangyur/placeholders/091-004_toh607,929-the_jeweled_rosary_the_unconquerable.xml
+++ b/translations/kangyur/placeholders/091-004_toh607,929-the_jeweled_rosary_the_unconquerable.xml
@@ -16,11 +16,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryaratnamālānāmāparājita</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-004"/>
             </publicationStmt>
             <sourceDesc>
@@ -51,6 +51,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:40:31.8Z" type="text-version" status="0.0.2" xml:id="UT22084-091-004-2">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T13:25:38.442Z" type="translation-status" status="3" xml:id="UT22084-091-004-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T13:25:38.442Z" type="text-version" status="0.0.3" xml:id="UT22084-091-004-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
