--- a/translations/kangyur/placeholders/091-005_toh608,926-sarvantarayikavisodhani_dharani.xml
+++ b/translations/kangyur/placeholders/091-005_toh608,926-sarvantarayikavisodhani_dharani.xml
@@ -13,11 +13,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarvāntarāyika­viśodhanī­nāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-005"/>
             </publicationStmt>
             <sourceDesc>
@@ -48,6 +48,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:36:44.635Z" type="text-version" status="0.0.2" xml:id="UT22084-091-005-2">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T13:27:13.508Z" type="translation-status" status="3" xml:id="UT22084-091-005-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T13:27:13.508Z" type="text-version" status="0.0.3" xml:id="UT22084-091-005-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
