--- a/translations/kangyur/placeholders/091-027_toh630,1010-the_incantation_for_eliminating_all_hindrances.xml
+++ b/translations/kangyur/placeholders/091-027_toh630,1010-the_incantation_for_eliminating_all_hindrances.xml
@@ -15,11 +15,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarvāntarāyika­saṃgrāsa­dhāraṇīmantra</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-027"/>
             </publicationStmt>
             <sourceDesc>
@@ -50,6 +50,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T14:03:22.787Z" type="text-version" status="0.0.2" xml:id="UT22084-091-027-2">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T13:54:57.645Z" type="translation-status" status="3" xml:id="UT22084-091-027-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T13:54:57.645Z" type="text-version" status="0.0.3" xml:id="UT22084-091-027-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
