--- a/translations/kangyur/placeholders/091-034_toh637,877-the_incantation_of_the_one_hundred_and_eight_names_of_samantabhadra.xml
+++ b/translations/kangyur/placeholders/091-034_toh637,877-the_incantation_of_the_one_hundred_and_eight_names_of_samantabhadra.xml
@@ -14,11 +14,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryasamanta­bhadrāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-034"/>
             </publicationStmt>
             <sourceDesc>
@@ -49,6 +49,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-02T12:59:39.297Z" type="text-version" status="0.0.2" xml:id="UT22084-091-034-2">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T15:50:21.176Z" type="translation-status" status="3" xml:id="UT22084-091-034-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T15:50:21.176Z" type="text-version" status="0.0.3" xml:id="UT22084-091-034-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
