--- a/translations/kangyur/placeholders/091-037_toh640,880-the_incantation_of_the_one_hundred_and_eight_names_of_sarvanivaranaviskambhin.xml
+++ b/translations/kangyur/placeholders/091-037_toh640,880-the_incantation_of_the_one_hundred_and_eight_names_of_sarvanivaranaviskambhin.xml
@@ -15,11 +15,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarvanīvaraṇa­viṣkaṃbhināmāṣṭottara­śatakaṃ dhāraṇīmantrasahitam</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-037"/>
             </publicationStmt>
             <sourceDesc>
@@ -50,6 +50,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-02T13:36:30.975Z" type="text-version" status="0.0.2" xml:id="UT22084-091-037-2">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T15:51:43.419Z" type="translation-status" status="3" xml:id="UT22084-091-037-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T15:51:43.419Z" type="text-version" status="0.0.3" xml:id="UT22084-091-037-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
