--- a/translations/kangyur/placeholders/091-042_toh645-the_incantation_the_production_of_ambrosia.xml
+++ b/translations/kangyur/placeholders/091-042_toh645-the_incantation_the_production_of_ambrosia.xml
@@ -10,8 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">bdud rtsi 'byung ba zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Amṛtabhavanāmadhāraṇī</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-042"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,6 +34,12 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-042-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T15:53:19.579Z" type="translation-status" status="3" xml:id="UT22084-091-042-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-30T15:53:19.579Z" type="text-version" status="0.0.1" xml:id="UT22084-091-042-3">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
