--- a/translations/kangyur/placeholders/080-001_toh417-the_hevajra_tantra.xml
+++ b/translations/kangyur/placeholders/080-001_toh417-the_hevajra_tantra.xml
@@ -12,20 +12,21 @@
                 <title type="longTitle" xml:lang="Bo-Ltn">kye'i rdo rje zhes bya ba rgyud kyi rgyal po/</title>
                 <title type="otherTitle" xml:lang="en">The sovereign part known as "Vajragarbha's Manifest Awakening" from "The Sovereign Tantra of Hevajra, He Who Affords Protection Through Nets of Ḍākinīs"</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn" rend="reconstruction">hevajra­dākinī­jāla­saṃvara­tantra­rāja</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Dvikalparāja (1)</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śrī­hevajra­ḍākinī­jāla­samvara­vajra­garbhābhi­saṃbodhi­nāma­prathamaḥ kalparājā</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Dvikalparāja (1)</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">kye'i rdo rje mkha' 'gro ma dra ba'i sdom pa las rdo rje snying po mngon par byang chub pa zhes bya ba brtag pa'i rgyal po/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">brtag pa gnyis/___brtag gnyis___(1)</title>
                 <author role="translatorMain" xml:id="UT22084-080-001-1"/>
                 <author role="translatorEng" xml:id="UT22084-080-001-2">Wiesiek Mical</author>
+                <sponsor xml:id="UT22084-080-001-11">Aron Csondes</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.47 <date>2023</date>
+                <edition>v 0.0.50 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-080-001"/>
                 <date/>
             </publicationStmt>
@@ -40,9 +41,7 @@
                     <idno source-id="O1JC114941JC12119" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="title" date-time="2022-03-07T12:30:58.951Z" user="john">The eleven chapters of this text together with the twelve chapters of the following one, Toh 418, together make up the root tantra known as the Two-Part Hevajra Tantra (Skt. dvikalparāja; Tib. brtag pa gnyis), traditionally considered to be an abridgement of a lost larger work in five hundred thousand stanzas, comprising thirty-two parts.</note>
-            </notesStmt>
+            <notesStmt/>
             <revisionDesc>
                 <change who="#john" when="2019-03-09T12:18:00.587Z" type="text-version" status="" xml:id="UT22084-080-001-3">
                     <desc/>
@@ -64,6 +63,18 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.47" xml:id="UT22084-080-001-9">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-09-03T07:13:55.22Z" type="text-version" status="0.0.48" xml:id="UT22084-080-001-10">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-09-03T07:14:15.975Z" type="text-version" status="0.0.49" xml:id="UT22084-080-001-12">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T08:25:03.457Z" type="translation-status" status="2.g" xml:id="UT22084-080-001-13">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T08:25:03.457Z" type="text-version" status="0.0.50" xml:id="UT22084-080-001-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
