--- a/translations/kangyur/placeholders/091-045_toh648,1081-the_incantation_for_overcoming_hindrances.xml
+++ b/translations/kangyur/placeholders/091-045_toh648,1081-the_incantation_for_overcoming_hindrances.xml
@@ -12,11 +12,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-045"/>
             </publicationStmt>
             <sourceDesc>
@@ -47,6 +47,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-08T06:02:13.873Z" type="text-version" status="0.0.2" xml:id="UT22084-091-045-2">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:04:38.661Z" type="translation-status" status="3" xml:id="UT22084-091-045-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:04:38.661Z" type="text-version" status="0.0.3" xml:id="UT22084-091-045-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
