--- a/translations/kangyur/placeholders/091-046_toh649,1077-essence_of_meteoric_gnosis.xml
+++ b/translations/kangyur/placeholders/091-046_toh649,1077-essence_of_meteoric_gnosis.xml
@@ -10,11 +10,11 @@
                 <title type="otherTitle" xml:lang="en">The Essence of Meteoric Gnosis</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-046"/>
             </publicationStmt>
             <sourceDesc>
@@ -45,6 +45,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-08T05:58:34.837Z" type="text-version" status="0.0.2" xml:id="UT22084-091-046-2">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:06:34.841Z" type="translation-status" status="3" xml:id="UT22084-091-046-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:06:34.841Z" type="text-version" status="0.0.3" xml:id="UT22084-091-046-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
