--- a/translations/kangyur/placeholders/093-004_toh689-procedures_for_the_king_of_practices_of_amoghapasa.xml
+++ b/translations/kangyur/placeholders/093-004_toh689-procedures_for_the_king_of_practices_of_amoghapasa.xml
@@ -10,8 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa don yod zhags pa'i rtog pa'i rgyal po'i cho ga zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryāmoghapāśakalparājavidhināma</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-004"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,6 +34,12 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-093-004-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:10:48.566Z" type="translation-status" status="3" xml:id="UT22084-093-004-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:10:48.566Z" type="text-version" status="0.0.1" xml:id="UT22084-093-004-3">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
