--- a/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
+++ b/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
@@ -38,7 +38,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-073-439">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.17 <date>2024</date>
+                <edition>v 1.1.18 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -64,7 +64,7 @@
                     <ref>Toh 675</ref>
                     <biblScope>Degé Kangyur, vol. 91 (rgyud ’bum, ba), folios
                         216.a–220.b</biblScope>
-                    <author role="translatorTib" xml:id="UT22084-091-073-467"/>
+                    <!--<author role="translatorTib" xml:id="UT22084-091-073-467"/>-->
                     <location work="UT4CZ5369" count-pages="10">
                         <volume number="91" start-page="431" end-page="440"/>
                     </location>
@@ -172,12 +172,15 @@
                 <change who="#andre" when="2024-06-26T06:48:39.425Z" type="text-version" status="1.1.17" xml:id="UT22084-091-073-474">
                     <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
                 </change>
+                <change who="#celso" when="2024-10-01T13:18:53.45Z" type="text-version" status="1.1.18" xml:id="UT22084-091-073-475">
+                    <desc>Removed empty Tibetan author statement</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
         <front>
-            <div type="summary">
+            <div type="summary" xml:id="UT22084-091-073-summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-091-073-1"/>
                 <p tid="2">The Buddha, while at the Jetavana in Śrāvastī, tells Mañjuśrī of a buddha
@@ -189,7 +192,7 @@
                     repeated numerous times. This is the lesser known of the two versions of this
                     sūtra in the Kangyur, but possibly represents the earlier translation.</p>
             </div>
-            <div type="acknowledgment">
+            <div type="acknowledgment" xml:id="UT22084-091-073-acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-091-073-2"/>
                 <p tid="4">The sūtra was translated from Tibetan by Peter Alan Roberts with
@@ -202,7 +205,7 @@
                 <p tid="5">The translation was completed under the patronage and supervision of
                     84000: Translating the Words of the Buddha.</p>
             </div>
-            <div type="introduction">
+            <div type="introduction" xml:id="UT22084-091-073-introduction">
                 <head type="introduction" tid="6">Introduction</head>
                 <div type="section" xml:id="UT22084-091-073-introduction-1">
                     <head type="section" tid="7">Overview</head>
@@ -384,10 +387,10 @@
                         from the later tantra practices that have their origin in this sūtra.</p>-->
                     </p>
                 </div>
-                <div type="section" xml:id="UT22084-091-073-introduction-4">
+                <div type="section" xml:id="UT22084-091-073-introduction-3">
                     <head type="section" tid="159">The Tibetan Versions of the Sūtra in the Kangyur,
                         Their Differences, and Their Translation</head>
-                    <div type="section" xml:id="UT22084-091-073-introduction-4-1">
+                    <div type="section" xml:id="UT22084-091-073-introduction-3-1">
                         <head type="section" tid="160">Differences in Content</head>
                         <milestone unit="chunk" xml:id="UT22084-091-073-35"/>
                         <p tid="29">There are two different but closely related versions of <title xml:lang="en">The Aparimitāyur­jñāna Sūtra</title> in most Kangyurs.
@@ -537,7 +540,7 @@
                             </item>
                         </list>
                     </div>
-                    <div type="section" xml:id="UT22084-091-073-introduction-4-2">
+                    <div type="section" xml:id="UT22084-091-073-introduction-3-2">
                         <head type="section" tid="184">Differences in Origin and Transmission</head>
                         <milestone unit="chunk" xml:id="UT22084-091-073-49"/>
                         <p tid="167">In essence, the other, best-known, “three <mantra xml:lang="Sa-Ltn" type="syllable">oṁ</mantra>” version of the sūtra,
@@ -662,7 +665,7 @@
                             been translated in the early, imperial period. </p>
                     </div>
 
-                    <div type="section" xml:id="UT22084-091-073-introduction-4-3">
+                    <div type="section" xml:id="UT22084-091-073-introduction-3-3">
                         <head type="section" tid="185">Debates About Difference and
                             Authenticity</head>
                         <milestone unit="chunk" xml:id="UT22084-091-073-61"/>
@@ -680,7 +683,7 @@
                             version. The following points represent the principal arguments that
                             these writers deploy to justify their unusually harsh judgment.</p>
 
-                        <div type="section" xml:id="UT22084-091-073-introduction-4-3-1">
+                        <div type="section" xml:id="UT22084-091-073-introduction-3-3-1">
                             <head type="section" tid="186">Absence of Indic source texts</head>
                             <milestone unit="chunk" xml:id="UT22084-091-073-64"/>
                             <p tid="170">Amé Zhab writes that Ngorchen Kunga Zangpo personally
@@ -726,7 +729,7 @@
                                     his misgivings.</note>
                             </p>
                         </div>
-                        <div type="section" xml:id="UT22084-091-073-introduction-4-3-2">
+                        <div type="section" xml:id="UT22084-091-073-introduction-3-3-2">
                             <head type="section" tid="187">Different versions might refer to
                                 different buddhas</head>
                             <milestone unit="chunk" xml:id="UT22084-091-073-386"/>
@@ -757,7 +760,7 @@
                                 in insisting that both versions are clearly focused on the tathāgata
                                 Aparimitāyur­jñāna, whose buddha realm is in the zenith. </p>
                         </div>
-                        <div type="section" xml:id="UT22084-091-073-introduction-4-3-3">
+                        <div type="section" xml:id="UT22084-091-073-introduction-3-3-3">
                             <head type="section" tid="188">One hundred and eight names are mentioned
                                 in the sūtra itself</head>
                             <milestone unit="chunk" xml:id="UT22084-091-073-387"/>
@@ -815,7 +818,7 @@
                                 adds considerable weight to Tāranātha’s inference that this is not
                                 necessarily a reference to the dhāraṇī itself. </p>
                         </div>
-                        <div type="section" xml:id="UT22084-091-073-introduction-4-3-4">
+                        <div type="section" xml:id="UT22084-091-073-introduction-3-3-4">
                             <head type="section" tid="189">The longer dhāraṇī may include a phrase
                                 added from elsewhere</head>
                             <milestone unit="chunk" xml:id="UT22084-091-073-393"/>
@@ -874,7 +877,7 @@
                             </p>
                         </div>
                     </div>
-                    <div type="section" xml:id="UT22084-091-073-introduction-4-4">
+                    <div type="section" xml:id="UT22084-091-073-introduction-3-4">
                         <head type="section" tid="190">Differences and Mixture: Possible
                             Conclusions</head>
                         <milestone unit="chunk" xml:id="UT22084-091-073-65"/>
@@ -917,7 +920,7 @@
                             have been preserved in all Kangyurs. </p>
                     </div>
                 </div>
-                <div type="section" xml:id="UT22084-091-073-introduction-3">
+                <div type="section" xml:id="UT22084-091-073-introduction-4">
                     <head type="section" tid="25">Sanskrit and Chinese Versions of the Text</head>
                     <milestone unit="chunk" xml:id="UT22084-091-073-32"/>
                     <p tid="27">There are many surviving manuscripts of the text in Sanskrit, but
@@ -1083,7 +1086,7 @@
 
         </front>
         <body>
-            <div type="translation">
+            <div type="translation" xml:id="UT22084-091-073-translation">
                 <head type="translation"> The Translation </head>
                 <head type="titleHon" tid="56">The Noble Mahāyāna</head>
                 <head type="titleMain" tid="57">Sūtra of Aparimitāyur­jñāna</head>
@@ -1585,7 +1588,7 @@
                             in the sense of being no less worthy of veneration than a monument
                             housing or representing the relics of a tathāgata’s body, as set out in
                                 <title xml:lang="en">The Teaching of Vimalakīrti</title> (<title xml:lang="Sa-Ltn">Vimala­kīrti­nirdeśa</title>, Toh 176) <ref target="https://read.84000.co/translation/toh176.html#UT22084-060-005-442">12.2–5</ref>, and in <title xml:lang="en">The White Lotus of the
-                                Good Dharma</title> (<title xml:lang="Sa-Ltn">Saddharma­puṇḍarīka</title>, Toh 113) <ref target="https://read.84000.co/translation/toh113.html?view-mode=editor#UT22084-051-001-1684">10.28–9</ref>. See Schopen 2005, pp. 25–62. </note> and worthy of
+                                Good Dharma</title> (<title xml:lang="Sa-Ltn">Saddharma­puṇḍarīka</title>, Toh 113) <ptr target="#UT22084-051-001-1684"/>–<ptr target="#UT22084-051-001-1686"/><!--10.28–9-->. See Schopen 2005, pp. 25–62. </note> and worthy of
                         veneration. Those birds and animals born in the animal realm who happen to
                         hear this <title xml:lang="Sa-Ltn">Aparimitāyur­jñāna Sūtra</title> will all
                         become perfectly awakened in the highest, most complete awakening. <ref cRef="F.219.b" type="folio" xml:id="UT22084-091-073-102"/>
@@ -1837,10 +1840,10 @@
             </div>
         </body>
         <back>
-            <div type="notes">
+            <div type="notes" xml:id="UT22084-091-073-notes">
                 <head type="notes" tid="133">Notes</head>
             </div>
-            <div type="listBibl">
+            <div type="listBibl" xml:id="UT22084-091-073-listBibl">
                 <head type="listBibl" tid="134">Bibliography</head>
                 <div type="section" xml:id="UT22084-091-073-listBibl-1">
                     <head type="section" tid="135">Source Texts</head>
@@ -2166,7 +2169,7 @@
                         Toh 68). 84000: Translating the Words of the Buddha, 2021.</bibl>
                 </div>
             </div>
-            <div type="glossary">
+            <div type="glossary" xml:id="UT22084-091-073-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-091-073-314">
@@ -2569,7 +2572,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">caitya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mchod rten</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མཆོད་རྟེན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Reliquary for the remains of a buddha or enlightened master. </p>
                             </note>
                         </gloss>
@@ -3141,16 +3144,19 @@
                     <item>
                         <gloss xml:id="UT22084-091-073-472" type="place" mode="match">
                             <term type="translationMain">Jetavana, Anāthapiṇḍada’s Park</term>
-                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam
+                                anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra
+                                ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
                     <item>
                         <gloss xml:id="UT22084-091-073-473" type="place" mode="match">
                             <term type="translationMain">Jetavana</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">jetavana</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dze ta’i tshal</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dze ta’i
+                                tshal</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཛེ་ཏའི་ཚལ།</term>
                             <note type="definition">
                                 <p>See “Jetavana, Anāthapiṇḍada’s Park.”</p>
