--- a/translations/kangyur/placeholders/096-014_toh765-the_practice_of_the_yaksa_manibhadra.xml
+++ b/translations/kangyur/placeholders/096-014_toh765-the_practice_of_the_yaksa_manibhadra.xml
@@ -8,8 +8,12 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Maṇibhadrayakṣasenakalpa</title>
                 <title type="mainTitle" xml:lang="en">The Practice of the Yakṣa Maṇibhadra</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-014"/>
             </publicationStmt>
             <sourceDesc>
@@ -28,6 +32,12 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-014-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T13:25:55.211Z" type="translation-status" status="3" xml:id="UT22084-096-014-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T13:25:55.211Z" type="text-version" status="0.0.1" xml:id="UT22084-096-014-3">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
